Moing to static constructor for PartitionsBuilderSplitsFirst