@@ -23,8 +23,6 @@ import sleeper.core.schema.Field;
 import sleeper.core.schema.Schema;
 import sleeper.core.schema.type.StringType;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -41,21 +39,20 @@ class PartitionsBuilderTest {
         RangeFactory rangeFactory = new RangeFactory(schema);
 
         // When
-        PartitionsBuilder builder = new PartitionsBuilder(schema)
-                .leavesWithSplits(
-                        Arrays.asList("A", "B", "C"),
-                        Arrays.asList("aaa", "bbb"))
+        PartitionsBuilder builder = PartitionsBuilderSplitsFirst.leavesWithSplits(schema,
+                List.of("A", "B", "C"),
+                List.of("aaa", "bbb"))
                 .parentJoining("D", "A", "B")
                 .parentJoining("E", "D", "C");
 
         // Then
-        List<Partition> expectedPartitions = Arrays.asList(
+        List<Partition> expectedPartitions = List.of(
                 Partition.builder()
                         .region(new Region(rangeFactory.createRange(field, "", "aaa")))
                         .id("A")
                         .leafPartition(true)
                         .parentPartitionId("D")
-                        .childPartitionIds(Collections.emptyList())
+                        .childPartitionIds(List.of())
                         .dimension(-1)
                         .build(),
                 Partition.builder()
@@ -63,7 +60,7 @@ class PartitionsBuilderTest {
                         .id("B")
                         .leafPartition(true)
                         .parentPartitionId("D")
-                        .childPartitionIds(Collections.emptyList())
+                        .childPartitionIds(List.of())
                         .dimension(-1)
                         .build(),
                 Partition.builder()
@@ -71,7 +68,7 @@ class PartitionsBuilderTest {
                         .id("C")
                         .leafPartition(true)
                         .parentPartitionId("E")
-                        .childPartitionIds(Collections.emptyList())
+                        .childPartitionIds(List.of())
                         .dimension(-1)
                         .build(),
                 Partition.builder()
@@ -79,7 +76,7 @@ class PartitionsBuilderTest {
                         .id("D")
                         .leafPartition(false)
                         .parentPartitionId("E")
-                        .childPartitionIds(Arrays.asList("A", "B"))
+                        .childPartitionIds(List.of("A", "B"))
                         .dimension(0)
                         .build(),
                 Partition.builder()
@@ -87,7 +84,7 @@ class PartitionsBuilderTest {
                         .id("E")
                         .leafPartition(false)
                         .parentPartitionId(null)
-                        .childPartitionIds(Arrays.asList("D", "C"))
+                        .childPartitionIds(List.of("D", "C"))
                         .dimension(0)
                         .build());
         assertThat(builder.buildList()).isEqualTo(expectedPartitions);
@@ -102,10 +99,9 @@ class PartitionsBuilderTest {
 
         // When I only care about leaf partitions, so I want any tree without caring about
         // the structure or the non-leaf IDs
-        PartitionTree tree = new PartitionsBuilder(schema)
-                .leavesWithSplits(
-                        Arrays.asList("A", "B", "C"),
-                        Arrays.asList("aaa", "bbb"))
+        PartitionTree tree = PartitionsBuilderSplitsFirst.leavesWithSplits(schema,
+                List.of("A", "B", "C"),
+                List.of("aaa", "bbb"))
                 .anyTreeJoiningAllLeaves()
                 .buildTree();
 
@@ -120,10 +116,9 @@ class PartitionsBuilderTest {
         // Given
         Field field = new Field("key1", new StringType());
         Schema schema = Schema.builder().rowKeyFields(field).build();
-        PartitionsBuilderSplitsFirst builder = new PartitionsBuilder(schema)
-                .leavesWithSplits(
-                        Arrays.asList("A", "B", "C"),
-                        Arrays.asList("aaa", "bbb"))
+        PartitionsBuilderSplitsFirst builder = PartitionsBuilderSplitsFirst.leavesWithSplits(schema,
+                List.of("A", "B", "C"),
+                List.of("aaa", "bbb"))
                 .parentJoining("D", "A", "B");
 
         // When / Then
@@ -140,16 +135,16 @@ class PartitionsBuilderTest {
 
         // When
         PartitionTree tree = PartitionsBuilderSplitsFirst
-                .leavesWithSplitsOnDimension(schema, 1, Arrays.asList("A", "B"), Collections.singletonList("aaa"))
+                .leavesWithSplitsOnDimension(schema, 1, List.of("A", "B"), List.of("aaa"))
                 .anyTreeJoiningAllLeaves()
                 .buildTree();
 
         // Then
         RangeFactory rangeFactory = new RangeFactory(schema);
-        assertThat(tree.getPartition("A").getRegion()).isEqualTo(new Region(Arrays.asList(
+        assertThat(tree.getPartition("A").getRegion()).isEqualTo(new Region(List.of(
                 rangeFactory.createRange(field1, "", null),
                 rangeFactory.createRange(field2, "", "aaa"))));
-        assertThat(tree.getPartition("B").getRegion()).isEqualTo(new Region(Arrays.asList(
+        assertThat(tree.getPartition("B").getRegion()).isEqualTo(new Region(List.of(
                 rangeFactory.createRange(field1, "", null),
                 rangeFactory.createRange(field2, "aaa", null))));
     }
